<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="23dp"
            android:paddingTop="?attr/actionBarSize">

            <TextView
                android:id="@+id/anAppTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/remindEvery"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/remindEvery"

                android:layout_marginTop="23dp"
                android:text="@string/are_you_staying_focused"
                android:textSize="30sp"
                tools:textSize="42sp"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/remindEvery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/timerNum"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                android:text="@string/remind_every"
                tools:textSize="24sp" />

            <EditText
                android:id="@+id/timerNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/distractQ"
                android:layout_marginTop="14dp"
                android:layout_toEndOf="@+id/remindEvery"
                android:layout_toRightOf="@+id/remindEvery"
                android:ems="10"
                android:inputType="time" />

            <TextView
                android:id="@+id/minText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/timerNum"
                android:layout_toEndOf="@+id/timerNum"
                android:layout_toRightOf="@+id/timerNum"
                android:text="@string/min"
                android:textSize="20sp" />

            <Button
                android:id="@+id/setBtn"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/remindEvery"
                android:layout_alignStart="@+id/remindEvery"
                android:layout_below="@+id/remindEvery"
                android:layout_marginTop="35dp"
                android:text="@string/set_timer" />

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/setBtn"
                android:text="@string/reset_timer" />

            <Button
                android:id="@+id/stopBtn"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/distaractedText"
                android:layout_alignTop="@+id/setBtn"
                android:layout_centerHorizontal="true"
                android:text="@string/stop_timer" />

            <TextView
                android:id="@+id/remindText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/setBtn"
                android:layout_alignStart="@+id/setBtn"
                android:layout_below="@+id/setBtn"
                android:layout_marginTop="24dp"
                android:text="@string/reminding_in"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/distractQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/distaractedText"
                android:layout_alignLeft="@+id/plusBtn"
                android:layout_alignRight="@+id/distaractedText"
                android:layout_alignStart="@+id/plusBtn"
                android:layout_below="@+id/anAppTo"
                android:layout_marginTop="9dp"
                android:text="@string/how_often_do_you_get_distracted"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mintext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/remindText"
                android:layout_alignEnd="@+id/stopBtn"
                android:layout_alignRight="@+id/stopBtn"
                android:text="@string/min"
                android:textSize="20sp" />

        </RelativeLayout>

    </FrameLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu" />


</android.support.v4.widget.DrawerLayout>